# nonebot_plugin_cocdicer

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak
nonebot_plugin_cocdicer/: README.md  __init__.py  cards.py  constant.py  data_source.py  deck.py  dices.py  investigator.py  messages.py  pc.py  rd.py  san_check.py  util.py
nonebot_plugin_cocdicer/assets/: public_deck.json
test/: bot.py
