[tool.poetry]
name = "nonebot_plugin_cocdicer"
version = "0.3.0"
description = "A COC dice plugin for Nonebot2"
authors = ["abrahumlink <307887491@qq.com>"]
documentation = "https://github.com/abrahum/nonebot_plugin_cocdicer#readme"
homepage = "https://github.com/abrahum/nonebot_plugin_cocdicer"
keywords = ["nonebot", "nonebot2", "coc", "dice"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/abrahum/nonebot_plugin_cocdicer"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
ujson = {version = ">=4.0.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
