[project]
name = "nonebot_plugin_cocdicer"
version = "0.5.4"
description = "A COC dice plugin for Nonebot2"
keywords = ["nonebot", "nonebot2", "coc", "dice"]
license = { text = "GPLv3" }
readme = "README.md"
dependencies = [
    "nonebot2 >=2.0.0-beta.1",
    "nonebot-adapter-onebot >=2.0.0-beta.1",
    "diro-py >=0.1",
    "nonebot-plugin-localstore>=0.1.0",
    "pydantic>=1.9.2",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/abrahum/nonebot_plugin_cocdicer"
Repository = "https://github.com/abrahum/nonebot_plugin_cocdicer"
Documentation = "https://github.com/abrahum/nonebot_plugin_cocdicer#readme"

[[project.authors]]
name = "abrahumlink"
email = "307887491@qq.com"

[dependency-groups]
dev = [
    "nonebot-adapter-console>=0.5.0",
    "nonebot2[fastapi]>=2.2.1",
]
